# WebSocket-Client-Application

./: .gitignore  BUILD.gn  README.md
include/: chat_interface.h  websocket_client.h
src/: chat_interface.cpp  main.cpp  websocket_client.cpp
test/: websocket_client_test.cpp
